[project]
name = "nash-equilibrium-ad-bidding"
version = "0.1.0"
description = "CPM prediction and optimal bidding strategy for first-price ad auctions using game-theoretic modeling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "h2o>=3.46.0.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "prettytable>=3.17.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
